# MosaicFillingDetection

./: .gitignore  CMakeLists.txt  ColorDetector.cpp  ColorDetector.h  ColorHistory.h  MarkerDetector.cpp  MarkerDetector.h  MosaicDetector.cpp  MosaicDetector.h  README.MD  main.cpp
include/: ColorDetector.h  MosaicDetector.h  TemplateProcessor.h
src/: ColorDetector.cpp  ColorHistory.cpp  MarkerDetector.cpp  MosaicDetector.cpp  TemplateProcessor.cpp  main.cpp
